force-app/main/default/objects/Opportunity/fields/Account_Reporting_In__c.field-meta.xml
<CustomField>
    <fullName>Account_Reporting_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Filtered by active/subscribed ISNetworld contractors - links to &quot;Reporting in Another Account&quot; reason for not subscribing</description>
    <label>Account Reporting In</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account must be an actively subscribed contractor</errorMessage>
        <filterItems>
            <field>Account.ISNetworld_Status__c</field>
            <operation>equals</operation>
            <value>Subscriber</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Contractor</value>
        </filterItems>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>notEqual</operation>
            <valueField>Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Account_Reporting_In</relationshipName>
    <type>Lookup</type>
</CustomField>