force-app/main/default/objects/Opportunity/fields/Billing_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Type__c</fullName>
    <description>Three fields/values from the Account object help drive product selection within the quote/cart. These fields/values are:
1 Customer/Account Type (Billing_Account_Type__c)
2 Region/Pricebook
3 Tier (Billing_Tier__c)

This particular field is stamped with the customer/account type at time of opty creation, via workflow, and will pass it down to all quotes created from this opty. The quote level field, Billing_Account_Type__c, will thereby receive this value and help drive product selection in the cart.

Field values that will be stamped on this will include: Hiring Client/Contractor Operator, Hiring Client Account Consolidation, Contractor, and Monarch. (These values are similar to the types of opportunities available)
Help Text</description>
    <label>Billing Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Account_Type</valueSetName>
    </valueSet>
</CustomField>