force-app/main/default/objects/Opportunity/fields/Billing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Billing_Tier__c</fullName>
    <description>Three fields/values from the Account object help drive product selection within the quote/cart. These fields/values are: 
1 Customer/Account Type (Billing_Account_Type__c)
2 Region/Pricebook
3 Tier (Billing_Tier__c)

This particular field is stamped with a contractor account&#39;s tier level, via workflow, and will pass it down to all quotes created from this opty. The quote level field, Billing_Tier__c, will thereby receive this value and help drive product selection in the cart.

Field values that will be stamped on this will include: Tier 1, Tier 2, Tier 3... Tier 11, Hierarchy (if account is secondary/sub contractor)</description>
    <label>Invoice Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 5</fullName>
            </value>
            <value>
                <fullName>Tier 6</fullName>
            </value>
            <value>
                <fullName>Tier 7</fullName>
            </value>
            <value>
                <fullName>Tier 8</fullName>
            </value>
            <value>
                <fullName>Tier 9</fullName>
            </value>
            <value>
                <fullName>Tier 10</fullName>
            </value>
            <value>
                <fullName>Heirarchy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>