force-app/main/default/objects/Opportunity/fields/Created_from_Template__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created from Template</label>
    <type>Checkbox</type>
</CustomField>