force-app/main/default/objects/Opportunity/fields/Current_Overlap__c.field-meta.xml
<CustomField>
    <fullName>Current_Overlap__c</fullName>
    <formula>1 - ( Number_of_Non_Subscriber_Contractors__c /  Number_of_Contractors__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Overlap %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>