force-app/main/default/objects/Opportunity/fields/Date_Changed_to_Pending_Client_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Date_Changed_to_Pending_Client_Feedback__c</fullName>
    <label>Date Changed to Pending Client Feedback</label>
    <type>Date</type>
</CustomField>