force-app/main/default/objects/Opportunity/fields/Date_of_Last_Contractor_Overlap__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Contractor_Overlap__c</fullName>
    <label>Date of Last Contractor Overlap</label>
    <type>Date</type>
</CustomField>