force-app/main/default/objects/Opportunity/fields/Days_until_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_until_Close__c</fullName>
    <formula>CloseDate - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>