force-app/main/default/objects/Opportunity/fields/Expected_New_Clients__c.field-meta.xml
<CustomField>
    <fullName>Expected_New_Clients__c</fullName>
    <formula>New_Client__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected New Clients</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>