force-app/main/default/objects/Opportunity/fields/Expected_Non_Subscriber_Letters__c.field-meta.xml
<CustomField>
    <fullName>Expected_Non_Subscriber_Letters__c</fullName>
    <formula>Number_of_Non_Subscriber_Contractors__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Non-Subscriber Letters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>