force-app/main/default/objects/Opportunity/fields/Final_Follow_up_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Follow_up_Letter_Sent__c</fullName>
    <label>Final Follow-up Letter Sent</label>
    <type>Date</type>
</CustomField>