force-app/main/default/objects/Opportunity/fields/Final_Follow_up_Letters_Count__c.field-meta.xml
<CustomField>
    <fullName>Final_Follow_up_Letters_Count__c</fullName>
    <label>Final Follow-up Letters Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>