force-app/main/default/objects/Opportunity/fields/Follow_up_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Letter_Sent__c</fullName>
    <label>Follow-up Letter Sent</label>
    <type>Date</type>
</CustomField>