force-app/main/default/objects/Opportunity/fields/Initial_Letter_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Initial_Letter_Deadline__c</fullName>
    <label>Initial Letter Deadline</label>
    <type>Date</type>
</CustomField>