force-app/main/default/objects/Opportunity/fields/Initial_Letter_Overlap__c.field-meta.xml
<CustomField>
    <fullName>Initial_Letter_Overlap__c</fullName>
    <label>Initial Letter Overlap %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>