force-app/main/default/objects/Opportunity/fields/Initial_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Initial_Letter_Sent__c</fullName>
    <label>Initial Letter Sent</label>
    <type>Date</type>
</CustomField>