force-app/main/default/objects/Opportunity/fields/Initial_Letters_Count__c.field-meta.xml
<CustomField>
    <fullName>Initial_Letters_Count__c</fullName>
    <label>Initial Letters Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>