force-app/main/default/objects/Opportunity/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <formula>SBQQ__PrimaryQuote__c  &lt;&gt; null  &amp;&amp;  (TEXT(SBQQ__PrimaryQuote__r.SBQQ__Status__c)  = &#39;Presented&#39;  || TEXT(SBQQ__PrimaryQuote__r.SBQQ__Status__c)  = &#39;Accepted&#39; || TEXT(SBQQ__PrimaryQuote__r.SBQQ__Status__c)  = &#39;Rejected&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>