force-app/main/default/objects/Opportunity/fields/Is_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Is_Implementation__c</fullName>
    <formula>AND(TEXT(StageName) = &#39;05 - Pending Letters&#39;,Today() &gt;= CloseDate - 30)
|| TEXT(StageName) = &#39;06 - Initial Letters Sent&#39;
|| TEXT(StageName) = &#39;07 - Follow-up Letters Sent&#39;
|| AND(TEXT(StageName) = &#39;08 - Final Follow-up Letters Sent&#39;, Today() &lt;= CloseDate + 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Implementation</label>
    <type>Checkbox</type>
</CustomField>