force-app/main/default/objects/Opportunity/fields/Is_Template__c.field-meta.xml
<CustomField>
    <fullName>Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Available to Admins to mark a record as a template. Apex class runs to create opportunities for similar records based on template records.</description>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>