force-app/main/default/objects/Opportunity/fields/jsImpacts__Added_from_Data_com__c.field-meta.xml
<CustomField>
    <fullName>jsImpacts__Added_from_Data_com__c</fullName>
    <formula>IF( OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;), Account.jsImpacts__Added_from_Data_com__c  = 1), &quot;Added from Data.com&quot;,&quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Added from Data.com</label>
    <type>Text</type>
</CustomField>