force-app/main/default/objects/Opportunity/fields/Last_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Attempt__c</fullName>
    <description>Tracks collections last attempt outreach - manually entered by rep</description>
    <label>Last Attempt</label>
    <type>Date</type>
</CustomField>