force-app/main/default/objects/Opportunity/fields/Lost_Dead_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lost_Dead_Notes__c</fullName>
    <label>Lost/Dead Notes</label>
    <type>TextArea</type>
</CustomField>