force-app/main/default/objects/Opportunity/fields/Lost_Dead_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Dead_Reason__c</fullName>
    <label>Lost/Dead Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lost_Dead_Reason</valueSetName>
    </valueSet>
</CustomField>