force-app/main/default/objects/Opportunity/fields/Lost_Dead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lost_Dead_Stage__c</fullName>
    <label>Lost/Dead Stage</label>
    <length>55</length>
    <type>Text</type>
</CustomField>