force-app/main/default/objects/Opportunity/fields/Management_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Management_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Management Engaged</label>
    <type>Checkbox</type>
</CustomField>