force-app/main/default/objects/Opportunity/fields/New_Client__c.field-meta.xml
<CustomField>
    <fullName>New_Client__c</fullName>
    <formula>IF(RecordType.Name = &#39;ISNetworld - New Client&#39;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>