force-app/main/default/objects/Opportunity/fields/Next_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Next_Attempt__c</fullName>
    <formula>Last_Attempt__c + 7</formula>
    <label>Next Attempt</label>
    <type>Date</type>
</CustomField>