force-app/main/default/objects/Opportunity/fields/Number_of_Non_Subscriber_Contractors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Non_Subscriber_Contractors__c</fullName>
    <inlineHelpText>Number should reflect most recent overlap</inlineHelpText>
    <label>Number of Non-Subscriber Contractors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>