force-app/main/default/objects/Opportunity/fields/OldOppty__c.field-meta.xml
<CustomField>
    <fullName>OldOppty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OldOppty</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>