force-app/main/default/objects/Opportunity/fields/Payment_Pending_From_Portal__c.field-meta.xml
<CustomField>
    <fullName>Payment_Pending_From_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>* * * Payment Pending from Portal (checkbox) - marked TRUE if a payment has been made via the community/portal and is processing * * * &lt;= Defered until payment processor is built/connected.</description>
    <label>Payment Pending From Portal</label>
    <type>Checkbox</type>
</CustomField>