force-app/main/default/objects/Opportunity/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <displayFormat>PS-{000000}</displayFormat>
    <inlineHelpText>Auto-generated number</inlineHelpText>
    <label>Project #</label>
    <type>AutoNumber</type>
</CustomField>