force-app/main/default/objects/Opportunity/fields/Question_Bank__c.field-meta.xml
<CustomField>
    <fullName>Question_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Bank</label>
    <referenceTo>Question_Bank__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>