force-app/main/default/objects/Opportunity/fields/Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Reason_Details__c</fullName>
    <description>Provides additional details re: reason for not subscribing picklist.</description>
    <inlineHelpText>Populate if Reason for Not Subscribing is No Cost Justification or Reporting in Another Account.</inlineHelpText>
    <label>Reason Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_for_Not_Subscribing__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual price adjustment</fullName>
            </value>
            <value>
                <fullName>Hierarchy dissolution</fullName>
            </value>
            <value>
                <fullName>Limited/no work with client</fullName>
            </value>
            <value>
                <fullName>Merger/acquisition</fullName>
            </value>
            <value>
                <fullName>Parent company account</fullName>
            </value>
            <value>
                <fullName>Reinstatement fee</fullName>
            </value>
            <value>
                <fullName>Tier increase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>