force-app/main/default/objects/Opportunity/fields/Reason_for_Not_Subscribing__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Not_Subscribing__c</fullName>
    <inlineHelpText>Populate if Stage is Pending Feedback</inlineHelpText>
    <label>Reason for Not Subscribing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client not enforcing requirement</fullName>
            </value>
            <value>
                <fullName>Contractor is out of business</fullName>
            </value>
            <value>
                <fullName>Contractor is unresponsive</fullName>
            </value>
            <value>
                <fullName>No cost justification</fullName>
            </value>
            <value>
                <fullName>Not required per contract/scope of work</fullName>
            </value>
            <value>
                <fullName>Pending contract with Client</fullName>
            </value>
            <value>
                <fullName>Reporting in another account</fullName>
            </value>
            <value>
                <fullName>Requirements too strenuous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>