force-app/main/default/objects/Opportunity/fields/Reason_for_Tier_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Tier_Change__c</fullName>
    <label>Reason for Tier Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Hierarchy Setup</fullName>
            </value>
            <value>
                <fullName>Included Subcontractors in Employee Count</fullName>
            </value>
            <value>
                <fullName>Lapsed Account</fullName>
            </value>
            <value>
                <fullName>Reported Current Employee Count</fullName>
            </value>
            <value>
                <fullName>Reported Estimated Employee Count</fullName>
            </value>
            <value>
                <fullName>Reported Exposure Hours</fullName>
            </value>
            <value>
                <fullName>Reported Seasonal Employee Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>