force-app/main/default/objects/Opportunity/fields/Reason_Justification_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Reason_Justification_Metrics__c</fullName>
    <label>Reason/Justification Metrics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Citation/Violation Recorded</fullName>
            </value>
            <value>
                <fullName>4th Quartile Client Benchmarking Report</fullName>
            </value>
            <value>
                <fullName>Fatality, SIF, or Other Incident</fullName>
            </value>
            <value>
                <fullName>ISN Recommendation</fullName>
            </value>
            <value>
                <fullName>Known Champion Contact</fullName>
            </value>
            <value>
                <fullName>M&amp;A Activity</fullName>
            </value>
            <value>
                <fullName>Roundtable/Workshop Attendee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>