force-app/main/default/objects/Opportunity/fields/Rep_Tags__c.field-meta.xml
<CustomField>
    <fullName>Rep_Tags__c</fullName>
    <inlineHelpText>Use this section to create unique tags for custom report filters. Example, #offshoretopoppty</inlineHelpText>
    <label>Rep Tags</label>
    <type>TextArea</type>
</CustomField>