force-app/main/default/objects/Opportunity/fields/RFP_Completed__c.field-meta.xml
<CustomField>
    <fullName>RFP_Completed__c</fullName>
    <inlineHelpText>If an RFP was completed, list the date is was submitted.</inlineHelpText>
    <label>RFP Completed</label>
    <type>Date</type>
</CustomField>