force-app/main/default/objects/Opportunity/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <description>Additional stage information based on the overarching stage.</description>
    <label>Sub-Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending CE Feedback</fullName>
            </value>
            <value>
                <fullName>Pending Payment</fullName>
            </value>
            <value>
                <fullName>Pending Client Feedback</fullName>
            </value>
            <value>
                <fullName>Relay Client Feedback</fullName>
            </value>
            <value>
                <fullName>Sub Follow Up Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>