force-app/main/default/objects/Opportunity/fields/Subscription_Region__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Region__c</fullName>
    <label>Subscription Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subscription_Region</valueSetName>
    </valueSet>
</CustomField>