force-app/main/default/objects/Opportunity/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <formula>CASE( Verticals__c, 
&#39;Contractor Development&#39;,&#39;CDev&#39;, 
&#39;Aerospace &amp; Defense&#39;,&#39;Aerospace&#39;, 
&#39;Australia &amp; New Zealand&#39;,&#39;ANZ&#39;, 
&#39;Beverages &amp; Dairy&#39;,&#39;Bev&#39;, 
&#39;Chemicals North&#39;,&#39;Chem North&#39;, 
&#39;Chemicals South&#39;,&#39;Chem South&#39;, 
&#39;Latin America&#39;,&#39;Lat Am&#39;, 
&#39;Midstream&#39;,&#39;MS&#39;, 
&#39;Mining&#39;,&#39;Onshore West&#39;, 
&#39;Pharma &amp; Facilities Management&#39;,&#39;Pharma&#39;, 
&#39;Pipelines Cross Borders&#39;,&#39;Pipelines C/B&#39;, 
&#39;Steel &amp; Metals&#39;,&#39;Steel&#39;, 
&#39;Utilities, Power Gen &amp; Public Sector East&#39;,&#39;Utilities East&#39;, 
&#39;Utilities, Power Gen &amp; Public Sector West&#39;,&#39;Utilities West&#39;, 
&#39;Western Canada C/Os, Utilities &amp; Public Sector&#39;,&#39;West Can COUPS&#39;, 
&#39;Western Canada Mining / Oil &amp; Gas&#39;,&#39;West Can MOG&#39;, 
TEXT(Verticals__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team (Opportunity)</label>
    <type>Text</type>
</CustomField>