force-app/main/default/objects/Opportunity/fields/Team_Email__c.field-meta.xml
<CustomField>
    <fullName>Team_Email__c</fullName>
    <label>Team Email</label>
    <type>Email</type>
</CustomField>