force-app/main/default/objects/Opportunity/fields/Template_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Template_SOQL__c</fullName>
    <inlineHelpText>Set the WHERE clause for the query. Will not run without it.</inlineHelpText>
    <label>Template SOQL</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>