force-app/main/default/objects/Opportunity/fields/Verticals__c.field-meta.xml
<CustomField>
    <fullName>Verticals__c</fullName>
    <label>Verticals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Verticals</valueSetName>
    </valueSet>
</CustomField>