force-app/main/default/objects/Opportunity/recordTypes/Contractor_Subscription.recordType-meta.xml
<RecordType>
    <fullName>Contractor_Subscription</fullName>
    <active>true</active>
    <businessProcess>Contractor Subscription</businessProcess>
    <label>Contractor Subscription</label>
</RecordType>