force-app/main/default/objects/Opportunity/recordTypes/Hiring_Client_Account_Consolidation.recordType-meta.xml
<RecordType>
    <fullName>Hiring_Client_Account_Consolidation</fullName>
    <active>true</active>
    <businessProcess>Hiring Client Subscription</businessProcess>
    <label>Hiring Client - Account Consolidation</label>
</RecordType>