force-app/main/default/objects/Opportunity/recordTypes/Hiring_Client_New_Contractor_Letters.recordType-meta.xml
<RecordType>
    <fullName>Hiring_Client_New_Contractor_Letters</fullName>
    <active>true</active>
    <businessProcess>Hiring Client - New Contractor Letters</businessProcess>
    <label>Hiring Client - New Contractor Letters</label>
</RecordType>