force-app/main/default/objects/Opportunity/recordTypes/Hiring_Client_Subscription.recordType-meta.xml
<RecordType>
    <fullName>Hiring_Client_Subscription</fullName>
    <active>true</active>
    <businessProcess>Hiring Client Subscription</businessProcess>
    <label>Hiring Client Subscription</label>
</RecordType>