force-app/main/default/objects/Opportunity/recordTypes/ISN_Professional_Services.recordType-meta.xml
<RecordType>
    <fullName>ISN_Professional_Services</fullName>
    <active>true</active>
    <businessProcess>Monarch</businessProcess>
    <label>Monarch</label>
</RecordType>