force-app/main/default/objects/Opportunity/validationRules/ChangeFromPendingClient.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeFromPendingClient</fullName>
    <active>true</active>
    <description>Only users with the integration profile can move an opportunity from Pending Client Feedback. Collections Leads and CDev Sups should be able to move to any stage.</description>
    <errorConditionFormula>AND(
NOT($Profile.Name = &#39;System Administrator&#39;),
ISCHANGED( Sub_Stage__c ),
ISPICKVAL(PRIORVALUE( Sub_Stage__c ),&#39;Pending Client Feedback&#39;)
)</errorConditionFormula>
    <errorMessage>The sub-stage cannot be moved from Pending Client Feedback manually.</errorMessage>
</ValidationRule>