force-app/main/default/objects/Opportunity/validationRules/LostDeadNotes.validationRule-meta.xml
<ValidationRule>
    <fullName>LostDeadNotes</fullName>
    <active>true</active>
    <description>Request Lost/Dead Notes when Oppty Stage is Lost/Dead</description>
    <errorConditionFormula>TEXT(StageName) = &#39;Lost/Dead&#39; &amp;&amp; ISBLANK(Lost_Dead_Notes__c)&amp;&amp; NOT(RecordTypeId = &#39;01234000000QFnzAAG&#39;)</errorConditionFormula>
    <errorDisplayField>Lost_Dead_Notes__c</errorDisplayField>
    <errorMessage>Lost/Dead Notes are required based on Stage.</errorMessage>
</ValidationRule>