force-app/main/default/objects/Opportunity/validationRules/LostDeadReason.validationRule-meta.xml
<ValidationRule>
    <fullName>LostDeadReason</fullName>
    <active>true</active>
    <description>Request Lost/Dead Reason when Oppty Stage is Lost/Dead</description>
    <errorConditionFormula>TEXT(StageName) = &#39;Lost/Dead&#39; &amp;&amp; ISBLANK(TEXT(Lost_Dead_Reason__c))</errorConditionFormula>
    <errorDisplayField>Lost_Dead_Reason__c</errorDisplayField>
    <errorMessage>Lost/Dead Reason is required based on Stage.</errorMessage>
</ValidationRule>