force-app/main/default/objects/Opportunity/validationRules/PreventCloseWithOpenInvoice.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventCloseWithOpenInvoice</fullName>
    <active>false</active>
    <description>Prevents closing an opportunity if there is an open invoice.</description>
    <errorConditionFormula>AND(
	 NOT($Profile.Name = &#39;System Administrator&#39;),
	 NOT (ISBLANK(SBQQ__PrimaryQuote__c) ),
	 OR(
		NOT ( ISPICKVAL( SBQQ__PrimaryQuote__r.SBQQ__Status__c , &#39;Draft&#39;)),
		NOT ( ISPICKVAL( SBQQ__PrimaryQuote__r.SBQQ__Status__c , &#39;Accepted&#39;)),
		NOT ( ISPICKVAL( SBQQ__PrimaryQuote__r.SBQQ__Status__c , &#39;Rejected&#39;))
	 ),
	 ISCHANGED ( StageName ),
	 IsClosed
 )</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Opportunity cannot be closed manually as there is an open invoice.</errorMessage>
</ValidationRule>